# DecentralizedErgodicControl

./: CMakeLists.txt  Dockerfile  README.md  create_agent.py  create_agent_rendering.py  create_env_rendering.py  create_scene.py  create_swarm.py  load_bag_data.py  package.xml  test_grid_maps.py
reference_material/decentralized_ergodic-master/: CMakeLists.txt  grid_visuals.py  main.py  package.xml  quadcopter_visual.py  target_visual.py  terrain.py
reference_material/decentralized_ergodic-master/launch/: run_sim.launch
reference_material/decentralized_ergodic-master/mesh/: prototipo.stl
reference_material/decentralized_ergodic-master/multi_target_local1/agent0/: ck_data.npy  control_data.npy  phik_data.npy  robot_state_data.npy  target0_covar_data.npy  target0_mean_data.npy  target1_covar_data.npy  target1_mean_data.npy  target2_covar_data.npy  (+2 more)
reference_material/decentralized_ergodic-master/multi_target_local2/: make_local_fig.py
reference_material/decentralized_ergodic-master/rviz/: config.rviz
reference_material/decentralized_ergodic-master/target_evasion_data/: city_blocks.csv
reference_material/decentralized_ergodic-master/target_test_data_for_ros/: city_blocks.csv  process_pdf_data.py
reference_material/decentralized_ergodic-master/target_test_data_for_ros0/: city_blocks.csv
reference_material/decentralized_ergodic-master/target_test_data_for_ros1/: city_blocks.csv
reference_material/decentralized_ergodic-master/target_test_data_for_ros2/: city_blocks.csv
reference_material/decentralized_ergodic-master/target_test_data_for_ros3/: city_blocks.csv
(+1595 files in other folders)
